Added the scoreboard system